[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/screens/LoginPanel.gd" type="Script" id=1]

[node name="Node" type="Node"]

[node name="LoginPanel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="User" type="LineEdit" parent="LoginPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -73.0
margin_top = -94.0
margin_right = 72.0
margin_bottom = -70.0
placeholder_text = "Email"

[node name="Password" type="LineEdit" parent="LoginPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -73.0
margin_top = -58.0
margin_right = 72.0
margin_bottom = -34.0
secret = true
placeholder_text = "Contrase√±a"

[node name="LoginButton" type="Button" parent="LoginPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -71.0
margin_top = -10.0
margin_right = -16.0
margin_bottom = 10.0
text = "Login"

[node name="HTTPLoginRequest" type="HTTPRequest" parent="LoginPanel"]

[node name="LoginError" type="AcceptDialog" parent="LoginPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -134.0
margin_top = 37.0
margin_right = 109.0
margin_bottom = 95.0

[node name="RegistroButton" type="Button" parent="LoginPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 8.0
margin_top = -10.0
margin_right = 72.0
margin_bottom = 10.0
text = "Registro"

[node name="Label" type="Label" parent="LoginPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -171.0
margin_right = 20.0
margin_bottom = -157.0
text = "Login"
[connection signal="pressed" from="LoginPanel/LoginButton" to="LoginPanel" method="_on_LoginButton_pressed"]
[connection signal="request_completed" from="LoginPanel/HTTPLoginRequest" to="LoginPanel" method="onHTTPLoginRequestCompleted"]
[connection signal="pressed" from="LoginPanel/RegistroButton" to="LoginPanel" method="_on_RegistroButton_pressed"]
